Restart Firefox broken in Nightly
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| thunderbird_esr60 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox65 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | + | verified |
People
(Reporter: aflorinescu, Assigned: mossop)
References
Details
(Keywords: regression)
Attachments
(1 file)
[Description:]
Starting with 03.07 nightly builds, restarting the browser using the known methods fails.
[Environment:]
Windows10 Pro
(Not affected) Ubuntu 16.04
(Not affected) Mac 10.14
[Steps:]
- Start Nightly. (03.07 build)
- Go about:profiles and select "Restart normally"
2'. Go about:profiles and select "Restart with addons disabled".
2". Press Ctrl+Shift+J and then Ctrl+Alt+R
[Actual Result:]
2./2'/2" Browser is shutdown and
[Expected Result:]
2. Browser is restarted normally.
2'. Browser is restarted with addons disabled.
2". Browser is restart normally + browser console opened.
[Regression Range:]
Mozregression could only : Narrowed inbound regression window from [ecbfad74, af29567e] (4 builds) to [ca64604d, af29567e] (2 builds) (~1 steps left), after which the inbound could not
Seems a bit unlikely, but it is possible that this regression was introduced by bug 1528252. Please remove the blocking if that's not what regressed the restart behavior.
Comment 1•7 years ago
|
||
Also it seems that if you download and unzip the archive and start the Firefox Browser from RUN with the -no-remote command the Firefox browser can be restarted without issues.
| Reporter | ||
Comment 2•7 years ago
|
||
(In reply to Rares Doghi from comment #1)
Also it seems that if you download and unzip the archive and start the Firefox Browser from RUN with the -no-remote command the Firefox browser can be restarted without issues.
So, probably the bug 1518639 is more likely than bug 1528252 to be a possible regressing factor for this bug.
Comment 3•7 years ago
|
||
My guess would be the DDE removal work in bug 513742.
| Assignee | ||
Comment 4•7 years ago
|
||
This is largely from bug 1518639.
What's happening is an error in the code is causing us to not shutdown the remote service before launching the new Firefox, so it probably attempts to remote to the process that is in the middle of quitting. Additionally telling the remote service to shutdown on windows isn't actually shutting it down.
Patch incoming.
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 5•7 years ago
|
||
The main changes here are to stop checking if we're shutting down when we
already know we are shutting down and making sure the windows remote server
shuts down properly.
I also spotted that nsINativeAppSupport.quit is now unused so I removed it.
| Assignee | ||
Updated•7 years ago
|
Updated•7 years ago
|
Comment 7•7 years ago
|
||
| bugherder | ||
Comment 8•7 years ago
|
||
Thanks for the fix. Latest Nightly is behaving normally now.
Comment 9•7 years ago
|
||
I verified this on Windows 10 and 7 with FF Nightly 67.0a1(2019-03-12) and I can confirm the fix.
Description
•