Bug 1533708: Properly shut down the remote service before launching Firefox again. r=jmathies

The main changes here are to stop checking if we're shutting down when we
already know we are shutting down and making sure the windows remote server
shuts down properly.

I also spotted that nsINativeAppSupport.quit is now unused so I removed it.

Differential Revision: https://phabricator.services.mozilla.com/D22771

--HG--
extra : moz-landing-system : lando